--- a/bowling/CMakeLists.txt
+++ b/bowling/CMakeLists.txt
@@ -53,7 +53,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 ##Insert project source files here.##
 set(SOURCES
     ${SOURCE_DIR}/game.cpp
-    ${SOURCE_DIR}/cmdArgumentsHandler.cpp
+    ${SOURCE_DIR}/ArgumentParser.cpp
 )
 
 add_library(${PROJECT_NAME}-lib STATIC ${SOURCES})
