--- a/bowling/CMakeLists.txt
+++ b/bowling/CMakeLists.txt
@@ -54,6 +54,8 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(SOURCES
     ${SOURCE_DIR}/game.cpp
     ${SOURCE_DIR}/input.cpp
+    ${SOURCE_DIR}/player.cpp
+    ${SOURCE_DIR}/lane.cpp
 )
 
 set(TESTS
