--- a/bowling/CMakeLists.txt
+++ b/bowling/CMakeLists.txt
@@ -60,12 +60,16 @@ add_library(${PROJECT_NAME}-lib STATIC ${SOURCES})
 
 add_executable(${PROJECT_NAME} ${SOURCE_DIR}/main.cpp)
 add_executable(${PROJECT_NAME}-ut ${TEST_DIR}/bowling-ut.cpp)
+add_executable(${PROJECT_NAME}-ap-ut ${TEST_DIR}/ArgumentParser-ut.cpp)
 
 target_link_libraries(${PROJECT_NAME} ${PROJECT_NAME}-lib)
 target_link_libraries(${PROJECT_NAME}-ut ${PROJECT_NAME}-lib gtest_main)
+target_link_libraries(${PROJECT_NAME}-ap-ut ${PROJECT_NAME}-lib gtest_main)
 
 target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Werror -Wconversion -pedantic -O3)
 target_compile_options(${PROJECT_NAME}-ut PRIVATE -Wall -Wextra -Werror -Wconversion -pedantic -O3)
+target_compile_options(${PROJECT_NAME}-ap-ut PRIVATE -Wall -Wextra -Werror -Wconversion -pedantic -O3)
 
 enable_testing()
 add_test(NAME BowlingTest COMMAND ${PROJECT_NAME}-ut)
+add_test(NAME ArgumentParserTest COMMAND ${PROJECT_NAME}-ap-ut)
