--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,15 @@ jobs:
       working-directory: bowling/build
       run: ctest -V
 
+  Lint:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - uses: DoozyX/clang-format-lint-action@v0.8
+      with:
+        source: '.'
+        exclude: './third_party ./external'
+        extensions: 'hpp,cpp'
+        clangFormatVersion: 9
+  
