add 2nd review comments

--- a/bowling/CMakeLists.txt
+++ b/bowling/CMakeLists.txt
@@ -53,13 +53,13 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 ##Insert project source files here.##
 set(SOURCES
     ${SOURCE_DIR}/game.cpp
-    ${SOURCE_DIR}/fileReader.cpp
+    ${SOURCE_DIR}/filesReader.cpp
     ${SOURCE_DIR}/ArgumentParser.cpp
 )
 
 set(TESTS
     ${TEST_DIR}/bowling-ut.cpp
-    ${TEST_DIR}/fileReader-ut.cpp
+    ${TEST_DIR}/filesReader-ut.cpp
 )
 
 add_library(${PROJECT_NAME}-lib STATIC ${SOURCES})
