Feature/parsing counting (#14)
* adding input module

* initial commit of input module
* add test harness for input module
* add inputTestDirecotry/ with example input files

* add basic test of input path

* fix for build in CI

CI requires filesystem library to be used as "experimanetal"
(old GCC requiremenets)

* add player and lane classes

* add reading files names

* add Lanes to Input

* refactor Input class

* add reading players

* refactor - parsing players not in the scope of this work

* refator to use share_ptr for collection of Lanes

* add players as strings + tests

* add lanes_ initialization

* moving init to Input constructor

* add init

* add init

* github debug

* add ASSERT isValid() in test

* modify path to test directory

* Revert "github debug"

This reverts commit 81948f96aea2ae96a3d023df4a79383284f24a70.

* update after review

* refactored tests

* apply review comments

* argumentParser unit tests refactored

* code formatting

* add 2nd review comments

* add RC

* add exception throwing

* remove clang format changes

* Working, needed tests + refactor

* algo + rename

* tests + major refactor

* algo + rename

* tests + major refactor

* additional test

* fix

* Small after rebase

* Delete non needed file

* remove clang format changes

* Working, needed tests + refactor

* tests + major refactor

* tests + major refactor

* CmakeLists

* Small tweaking in files

* Trailing whitespace

* Review pt1

* Review pt2

* used namespace alias

* add index check for players_

* formating for tests

* formatting

* more formatting

* remove clang format changes

* Working, needed tests + refactor

* algo + rename

* tests + major refactor

* algo + rename

* tests + major refactor

* additional test

* fix

* Small after rebase

* Delete non needed file

* remove clang format changes

* Working, needed test

--- a/bowling/CMakeLists.txt
+++ b/bowling/CMakeLists.txt
@@ -55,11 +55,14 @@ set(SOURCES
     ${SOURCE_DIR}/game.cpp
     ${SOURCE_DIR}/filesReader.cpp
     ${SOURCE_DIR}/ArgumentParser.cpp
+    ${SOURCE_DIR}/frameParser.cpp
+    ${SOURCE_DIR}/tokenizer.cpp
 )
 
 set(TESTS
     ${TEST_DIR}/bowling-ut.cpp
     ${TEST_DIR}/filesReader-ut.cpp
+    ${TEST_DIR}/parser-ut.cpp
 )
 
 add_library(${PROJECT_NAME}-lib STATIC ${SOURCES})
