--- a/bowling/CMakeLists.txt
+++ b/bowling/CMakeLists.txt
@@ -57,6 +57,7 @@ set(SOURCES
     ${SOURCE_DIR}/argumentParser.cpp
     ${SOURCE_DIR}/frameParser.cpp
     ${SOURCE_DIR}/tokenizer.cpp
+    ${SOURCE_DIR}/Printer.cpp
 )
 
 set(TESTS
@@ -64,6 +65,7 @@ set(TESTS
     ${TEST_DIR}/filesReader-ut.cpp
     ${TEST_DIR}/argumentParser-ut.cpp
     ${TEST_DIR}/parser-ut.cpp
+    ${TEST_DIR}/printer-ut.cpp
 )
 
 add_library(${PROJECT_NAME}-lib STATIC ${SOURCES})
